--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 git คือความนึกคิดที่ชีวิตพึงมี
 ความนึกคิดที่อาจแตกกระจายสู่เส้นทางที่เหนือกาลเวลา
+กิ่งของความเป็นไปได้ สถานที่ที่มีเพียง git เท่านั้นที่เดินทางข้ามไปได้
